# OfficeWorks-Author

./: .gitignore  .travis.yml  AUTHORS.md  README.md  autoinstall.sh  com.github.aggalex.ow-author.json  meson.build
Old/: Granite2.py  OldGranite2.py  granite.py  headerbarbgpng  org.alex.catagraphy.desktop  style.css
data/: com.github.aggalex.ow-author.appdata.xml  com.github.aggalex.ow-author.desktop  com.github.aggalex.ow-author.gresource.xml  com.github.aggalex.ow-author.gschema.xml  meson.build
data/css/: style.css
debian/: changelog  control  copyright  rules
po/: com.github.aggalex.ow-author.pot
src/: Application.vala  Main.vala  Window.vala  meson.build
src/configs/: Constants.vala  Settings.vala
src/controllers/: AppController.vala
src/views/: AppView.vala  EditView.vala  ToolBox.vala  Toolbox Home.vala
src/widgets/: HeaderBar.vala  TextBuffer.vala
