sources += files(
    'configs/Constants.vala',
    'configs/Settings.vala',
    
    'controllers/AppController.vala',
    
    'views/EditView.vala',
    'views/ToolBox.vala',

    'widgets/HeaderBar.vala',
    'widgets/TextBuffer.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)
