sources += files(
    'configs/Constants.vala',
    'configs/Settings.vala',
    
    'controllers/AppController.vala',
    
    'views/EditView.vala',
    'views/Navigation.vala',

    'widgets/HeaderBar.vala',
    'widgets/TextBuffer.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)
